deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sop-search
  labels:
    name: sop-search
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sop-search
  template:
    metadata:
      labels: 
        name: sop-search
    spec:
      serviceAccountName: sop-search
      containers:
        - name: sop-elasticsearch
          image: # your elasticsearch image url here
        - name: sop-search
          image: # your sop-search image url here 
          volumeMounts:
          - name: githubkey
            mountPath: "/etc/ssh"
            readOnly: true
        - name: sop-ui
          image: # your ui image url here
          port:
          - containerPort: 9000
            protocol: TCP
      restartPolicy: Always
      volumes:
      - name: githubkey
        secret:
          secretName: ssh
          items:
          - key: ssh-privatekey
            path: id_rsa
          - key: ssh-publickey
            path: id_rsa.pub
