deploy/service_elastic.yml
apiVersion: v1
kind: Service
metadata:
  name: sop-search-elastic
  namespace: sop-search
spec:
  selector:                  
    name: sop-search
  ports:
  - nodePort: 0
    port: 9200               
    protocol: TCP
    targetPort: 9200
