deploy/route_ui.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sop-search-ui
  namespace: sop-search
spec:
  to:
    kind: Service
    name: sop-search-service
    weight: 100
  port:
    targetPort: 5000
  wildcardPolicy: None
